[tool.poetry]
name = "lora-wan-bot"
version = "0.1.0"
description = ""
authors = ["Nizovtsev Sergei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
aiosqlite = "^0.20.0"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
